adding description to each credentials

--- a/casc/credentials.yaml
+++ b/casc/credentials.yaml
@@ -3,37 +3,43 @@ credentials:
     domainCredentials:
     - credentials:
       - gitHubApp:
+          description: "github-app"
           appID: "1249881"
           id: "Doojin-Jenkins"
           privateKey: "${GITHUB_APP_PRIVATE_KEY}"
       - usernamePassword:
+          description: "docker-hub"
           id: "docker-hub"
           password: "${DOCKER_HUB_PASSWORD}"
           scope: GLOBAL
           username: "${DOCKER_HUB_USERNAME}"
       - file:
-          fileName: "config"
+          description: "kube-config-staging"
+          fileName: "kube-config-staging.txt"
           id: "kube-config-staging"
           scope: GLOBAL
           secretBytes: "${KUBE_CONFIG_STAGING}"
       - file:
-          fileName: "config"
+          description: "kube-config-prod"
+          fileName: "kube-config-prod.txt"
           id: "kube-config-prod"
           scope: GLOBAL
           secretBytes: "${KUBE_CONFIG_PRODUCTION}"
       - usernamePassword:
+          description: "postgres-staging"
           id: "postgres-staging"
           password: "${POSTGRES_STAGING_PASSWORD}"
           scope: GLOBAL
           username: "${POSTGRES_STAGING_USERNAME}"
       - usernamePassword:
+          description: "postgres-prod"
           id: "postgres-prod"
           password: "${POSTGRES_PRODUCTION_PASSWORD}"
           scope: GLOBAL
           username: "${POSTGRES_PRODUCTION_USERNAME}"
       - file:
           description: "agents-cluster-kubeconfig"
-          fileName: "config"
+          fileName: "agents-cluster-kubeconfig.txt"
           id: "agents-cluster-kubeconfig"
           scope: GLOBAL
           secretBytes: "${KUBE_CONFIG_AGENTS}"
