decoding base64-encoded credentials

--- a/casc/credentials.yaml
+++ b/casc/credentials.yaml
@@ -6,7 +6,7 @@ credentials:
           description: "github-app"
           appID: "1249881"
           id: "Doojin-Jenkins"
-          privateKey: "${GITHUB_APP_PRIVATE_KEY}"
+          privateKey: "${decodeBase64:${GITHUB_APP_PRIVATE_KEY}}"
       - usernamePassword:
           description: "docker-hub"
           id: "docker-hub"
